# remote_hardware

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  esp_rest_main.c  rest_server.c
www/: index.html  index.js
